# XPP

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  composite_types.md  example.x  example.xpp  tests.sh
.github/workflows/: tests.yml
lib/: libc.xpp  str.xpp
misc/highlighting-vs-code/: README.md  package.json  xpp-0.0.1.vsix
misc/highlighting-vs-code/icons/: XPP-Logo.json
misc/highlighting-vs-code/syntaxes/: xpp.tmLanguage.json
src/: ast.hpp  compiler.cpp  decl.cpp  decl.hpp  emitter.cpp  emitter.hpp  expr.cpp  expr.hpp  handler.cpp  handler.hpp  lexer.cpp  lexer.hpp  module.cpp  module.hpp  parser.cpp  parser.hpp  stmt.cpp  stmt.hpp  token.cpp  token.hpp  type.cpp  type.hpp  verifier.cpp  verifier.hpp  visitor.hpp
tests/errors/: foo.xpp  test_00.xpp  test_01.xpp  test_02.xpp  test_03.xpp  test_04.xpp  test_05.xpp  test_06.xpp  test_07.xpp  test_08.xpp  test_09.xpp  test_10.xpp  test_11.xpp  test_12.xpp  test_13.xpp  test_14.xpp  test_15.xpp  test_16.xpp  test_17.xpp  test_18.xpp  test_19.xpp  test_20.xpp  test_24.xpp  test_25.xpp  test_26.xpp  test_27.xpp  test_28.xpp  test_29.xpp  test_30.xpp  test_31.xpp  test_32.xpp  test_33.xpp  test_34.xpp  test_35.xpp  test_36.xpp  test_37.xpp  test_38.xpp  test_39.xpp  test_40.xpp  test_42.xpp  (+38 more)
tests/libs/: test_01.txt  test_01.xpp
tests/minor-errors/: test_03.xpp  test_21.xpp  test_22.xpp  test_23.xpp  test_41.xpp  test_43.xpp  test_44.xpp  test_52.xpp  test_53.xpp  test_55.xpp
tests/running/: foo.xpp  test_01.xpp  test_02.xpp  test_03.xpp  test_04.xpp  test_05.txt  test_05.xpp  test_06.txt  test_06.xpp  test_07.txt  test_07.xpp  test_08.xpp  test_09.xpp  test_10.txt  test_10.xpp  test_11.txt  test_11.xpp  test_12.txt  test_12.xpp  test_13.txt  test_13.xpp  test_14.txt  test_14.xpp  test_15.txt  test_15.xpp  test_16.txt  test_16.xpp  test_17.xpp  test_18.txt  test_18.xpp  test_19.txt  test_19.xpp  test_20.txt  test_20.xpp  test_21.xpp  test_22.txt  test_22.xpp  test_23.txt  test_23.xpp  test_24.xpp  (+26 more)
tests/tokens/: test_01.txt  test_01.xpp  test_02.txt  test_02.xpp
website/mydocs/: config.toml
website/mydocs/content/: _index.md
website/mydocs/content/X Lang/: _index.md
website/mydocs/content/X Lang/X Docs/: _index.md  getting-started.md  grammar.md
website/mydocs/content/X Lang/X Docs/language/: methods.md  operators.md
website/mydocs/content/X++ Docs/: getting-started.md  grammar.md
website/mydocs/content/X++ Lang/: _index.md
website/mydocs/content/X++ Lang/X++ Docs/: _index.md  getting-started.md  grammar.md
website/mydocs/content/X++ Lang/X++ Examples/: array-list.md
(+2 files in other folders)
